[KAN-100]:CBT Synthesizer implementation