@@ -27,30 +27,13 @@ import java.util.stream.Collectors;
  * This worker uses LLM capabilities to perform analysis and returns structured
  * insights that can be used by the MultimodalSynthesisService.
  */
+
 public class TextAnalysisWorker {
 
     private final ChatLanguageModel chatModel;
     private final VectorDatabaseService vectorDatabaseService;
     private String sessionId;
     private String userId;
-
-    private static class AnalysisResult<T> {
-        private final T result;
-        private final double confidence;
-
-        public AnalysisResult(T result, double confidence) {
-            this.result = result;
-            this.confidence = confidence;
-        }
-
-        public T getResult() {
-            return result;
-        }
-
-        public double getConfidence() {
-            return confidence;
-        }
-    }
 
     public TextAnalysisWorker() {
         this.chatModel = GoogleAiGeminiChatModel.builder()
@@ -61,11 +44,6 @@ public class TextAnalysisWorker {
                 .maxOutputTokens(300)
                 .build();
         this.vectorDatabaseService = new VectorDatabaseService();
-    }
-
-    public void setSessionContext(String userId, String sessionId) {
-        this.userId = userId;
-        this.sessionId = sessionId;
     }
 
     /**
@@ -79,17 +57,14 @@ public class TextAnalysisWorker {
         Map<String, Object> analysis = new HashMap<>();
 
         // Perform basic analysis
-        AnalysisResult<String> emotionResult = detectEmotion(userInput);
-        analysis.put("emotion", emotionResult.getResult());
-        analysis.put("emotionConfidence", emotionResult.getConfidence());
+        String emotion = detectEmotion(userInput);
+        analysis.put("emotion", emotion);
 
-        AnalysisResult<List<String>> distortionsResult = detectCognitiveDistortions(userInput);
-        analysis.put("cognitiveDistortions", distortionsResult.getResult());
-        analysis.put("cognitiveDistortionsConfidence", distortionsResult.getConfidence());
+        List<String> cognitiveDistortions = detectCognitiveDistortions(userInput);
+        analysis.put("cognitiveDistortions", cognitiveDistortions);
 
-        AnalysisResult<List<String>> themesResult = extractKeyThemes(userInput);
-        analysis.put("keyThemes", themesResult.getResult());
-        analysis.put("keyThemesConfidence", themesResult.getConfidence());
+        List<String> keyThemes = extractKeyThemes(userInput);
+        analysis.put("keyThemes", keyThemes);
 
         if (userId != null && sessionId != null) {
             Map<String, Object> metadataFilters = new HashMap<>();
@@ -100,7 +75,7 @@ public class TextAnalysisWorker {
                     vectorDatabaseService.findSimilarContent(userInput, metadataFilters, 3);
 
             if (!similarAnalyses.isEmpty()) {
-                analysis.put("recurringPatterns", extractRecurringPatterns(similarAnalyses, distortionsResult.getResult()));
+                analysis.put("recurringPatterns", extractRecurringPatterns(similarAnalyses, cognitiveDistortions));
             }
         }
 
@@ -112,73 +87,82 @@ public class TextAnalysisWorker {
      * Detects the primary emotion expressed in the text
      *
      * @param text The text to analyze
-     * @return AnalysisResult containing the detected primary emotion and confidence score
+     * @return The detected primary emotion
      */
-    private AnalysisResult<String> detectEmotion(String text) {
+    private String detectEmotion(String text) {
         List<ChatMessage> messages = List.of(
-                SystemMessage.from("You are an emotion detection system. Analyze the text and identify the primary emotion expressed. Respond with the emotion and confidence score in format 'emotion|confidence' where emotion is one of: anger, fear, joy, sadness, surprise, disgust, neutral, anxiety, shame, guilt. Confidence should be between 0 and 1."),
+                SystemMessage.from("You are an emotion detection system. Analyze the text and identify the primary emotion expressed. Respond with only one word from this list: anger, fear, joy, sadness, surprise, disgust, neutral, anxiety, shame, guilt."),
                 UserMessage.from(text)
         );
 
         ChatResponse response = chatModel.chat(messages);
-        String[] parts = response.aiMessage().text().trim().toLowerCase().split("\\|");
-        return new AnalysisResult<>(parts[0], Double.parseDouble(parts[1]));
+        return response.aiMessage().text().trim().toLowerCase();
     }
 
     /**
      * Detects cognitive distortions in the text according to CBT principles
      *
      * @param text The text to analyze
-     * @return AnalysisResult containing the list of cognitive distortions and confidence score
+     * @return A list of detected cognitive distortions
      */
-    private AnalysisResult<List<String>> detectCognitiveDistortions(String text) {
+    private List<String> detectCognitiveDistortions(String text) {
         List<ChatMessage> messages = List.of(
-                SystemMessage.from("You are a CBT analysis system. Identify cognitive distortions in the text according to CBT principles. Respond with distortions and confidence score in format 'distortions|confidence' where distortions are comma-separated. If none present, respond with 'none|confidence'. Common distortions: all-or-nothing thinking, overgeneralization, mental filter, disqualifying the positive, jumping to conclusions, magnification, emotional reasoning, should statements, labeling, personalization."),
+                SystemMessage.from("You are a CBT analysis system. Identify any cognitive distortions in the text according to CBT principles. Respond with only the names of the distortions separated by commas. If none are present, respond with 'none'. Common distortions: all-or-nothing thinking, overgeneralization, mental filter, disqualifying the positive, jumping to conclusions, magnification, emotional reasoning, should statements, labeling, personalization."),
                 UserMessage.from(text)
         );
 
         ChatResponse response = chatModel.chat(messages);
-        String[] parts = response.aiMessage().text().trim().toLowerCase().split("\\|");
-        List<String> distortions = parts[0].equals("none") ?
-                List.of() :
-                Arrays.asList(parts[0].split("\\s*,\\s*"));
-        return new AnalysisResult<>(distortions, Double.parseDouble(parts[1]));
+        String distortionsText = response.aiMessage().text().trim().toLowerCase();
+
+        if (distortionsText.equals("none")) {
+            return List.of();
+        }
+
+        return Arrays.asList(distortionsText.split(",\\s*"));
     }
 
     /**
-     * Extracts key themes from the text
+     * Extracts key themes or concerns from the text
      *
      * @param text The text to analyze
-     * @return AnalysisResult containing the list of key themes and confidence score
+     * @return A list of key themes
      */
-    private AnalysisResult<List<String>> extractKeyThemes(String text) {
+    private List<String> extractKeyThemes(String text) {
         List<ChatMessage> messages = List.of(
-                SystemMessage.from("You are a theme extraction system. Identify the main themes or concerns in the text. Respond with themes and confidence score in format 'themes|confidence' where themes are comma-separated. Limit to 3 most important themes."),
+                SystemMessage.from("You are a theme extraction system. Identify the main themes or concerns in the text. Respond with only the themes separated by commas. Limit to 3 most important themes."),
                 UserMessage.from(text)
         );
 
         ChatResponse response = chatModel.chat(messages);
-        String[] parts = response.aiMessage().text().trim().split("\\|");
-        return new AnalysisResult<>(
-                Arrays.asList(parts[0].split("\\s*,\\s*")),
-                Double.parseDouble(parts[1])
-        );
+        String themesText = response.aiMessage().text().trim();
+
+        return Arrays.asList(themesText.split(",\\s*"));
     }
 
-    /**
-     * Extracts recurring patterns from similar analyses
-     *
-     * @param similarAnalyses List of similar analysis results
-     * @param currentDistortions Current cognitive distortions
-     * @return List of recurring patterns
-     */
-    private List<String> extractRecurringPatterns(
-            List<EmbeddingMatch<TextSegment>> similarAnalyses,
-            List<String> currentDistortions) {
-        // Implementation for pattern extraction
-        // This could be enhanced to include confidence scores as well
-        return similarAnalyses.stream()
-                .map(match -> match.embedded().text())
+    public void setSessionContext(String sessionId, String userId) {
+        this.sessionId = sessionId;
+        this.userId = userId;
+    }
+
+    private List<String> extractRecurringPatterns(List<EmbeddingMatch<TextSegment>> similarAnalyses,
+                                                  List<String> currentDistortions) {
+        Map<String, Integer> distortionCounts = new HashMap<>();
+        for (String distortion : currentDistortions) {
+            distortionCounts.put(distortion, 1);
+        }
+
+        for (EmbeddingMatch<TextSegment> match : similarAnalyses) {
+            String text = match.embedded().text();
+            for (String distortion : currentDistortions) {
+                if (text.toLowerCase().contains(distortion.toLowerCase())) {
+                    distortionCounts.put(distortion, distortionCounts.getOrDefault(distortion, 0) + 1);
+                }
+            }
+        }
+
+        return distortionCounts.entrySet().stream()
+                .filter(entry -> entry.getValue() > 1)
+                .map(Map.Entry::getKey)
                 .collect(Collectors.toList());
     }
 }
